# SubRedBot

./: .gitignore  README.md  pyproject.toml
docs/: CHANGELOG.md  TODO.md
src/: bot.py  config.py
src/cogs/: __init__.py  slash.py
src/data_handler/: __init__.py  posts.py
src/reddit_client/: __init__.py  client.py
